# vaultdb_core_operators

./: CMakeLists.txt  install-packages.sh  main.cpp
.github/workflows/: main.yml
common/: defs.h
data/: CMakeLists.txt  DataProvider.h  PQDataProvider.cpp  PQDataProvider.h  ShareData.cpp  ShareData.h  UnsecureTable.cpp  UnsecureTable.h  pqxx_compat.cpp  pqxx_compat.h  pqxx_compat_test.cpp  proto_converter.cpp  proto_converter.h  proto_converter_test.cpp
java/: pom.xml
java/src/main/java/: DBQuery.java
java/src/main/proto/: dbquery.proto
operators/: CMakeLists.txt  Filter.cpp  SecureJoin.cpp  SecureJoin.h  secure_join.cpp  secure_join.h  secure_join_test.cpp
querytable/: CMakeLists.txt  DummyFlag.cpp  DummyFlag.h  QueryField.cpp  QueryField.h  QueryFieldDesc.cpp  QueryFieldDesc.h  QuerySchema.cpp  QuerySchema.h  QueryTable.cpp  QueryTable.h  QueryTuple.cpp  QueryTuple.h  TableManager.cpp  TableManager.h  private_share_utility.cpp  private_share_utility.h  query_field.cpp  query_field.h  query_field_desc.cpp  query_field_desc.h  query_field_test.cpp  query_schema.cpp  query_schema.h  query_table.cpp  query_table.h  query_tuple.cpp  query_tuple.h  table_manager.h
querytable/expression/: expression.cpp  expression.h  expression_id.h
querytable/types/: CMakeLists.txt  arithmetic_type.cpp  arithmetic_type.h  bool_result.cpp  bool_result.h  encrypted_integer_type.cpp  encrypted_integer_type.h  integer_type.cpp  integer_type.h  type.cpp  type.h  type_id.h  value.cpp  value.h
querytable/types/encrypted/: encrypted_boolean_type.cpp  encrypted_boolean_type.h  encrypted_integer_type.cpp  encrypted_integer_type.h
querytable/types/unencrypted/: boolean_type.cpp  boolean_type.h  integer_type.cpp  integer_type.h
rpc/: CMakeLists.txt  DBQueryClient.cpp  DBQueryClient.h
